# web_scraper

./: LICENSE  README.md
paris.fr/: README.md  python_request.py  python_request_nb.py
paris.fr/cpp/: CMakeLists.txt  README.md  booking.cc  booking_mt.cc  data.txt
paris.fr/python/: data.json
